tests/invalid/UnionType_Invalid_17.whiley
type named is null | int[]

function f(named f) -> int:
    return |f|